k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
spec:
  selector:
    app: chat-backend
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
