k8s/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chat-backend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 8003
